--- a/index.html
+++ b/index.html
@@ -1,79 +1,171 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <title>Practice English</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.css">
+</head>
+<body>
+  <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Practice English : Practice English is non commercial education project for people who learn English and want to practice it">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Practice English</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/mac2000/PracticeEnglish">View on GitHub</a>
-
-          <h1 id="project_title">Practice English</h1>
-          <h2 id="project_tagline">Practice English is non commercial education project for people who learn English and want to practice it</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/mac2000/PracticeEnglish/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/mac2000/PracticeEnglish/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+    <div data-bind="if: connected">
+      <span class="label label-success">Connected</span>
+    </div>
+    <div data-bind="ifnot: connected">
+      <span class="label label-danger">Disconnected</span>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+    <div data-bind="if: isJoinFormVisible">
+      <h4>Join</h4>
+      <form data-bind="submit: join">
+        <p>
+          <input type="text" placeholder="Skype" data-bind="value: skype" class="form-control" maxlength="100" required="required" />
+        </p>
+        <p>
+          <input type="number" placeholder="Age" data-bind="value: age" class="form-control" min="3" max="110" required="required" />
+        </p>
+        <p>
+          <input type="text" placeholder="Country" data-bind="value: country" class="form-control" maxlength="100" required="required" />
+        </p>
+        <p>
+          <input type="text" placeholder="Topics" data-bind="value: topics" class="form-control" maxlength="200" required="required" />
+        </p>
+        <p>
+          <input type="submit" value="Join" class="btn btn-default" />
+        </p>
+      </form>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Practice English maintained by <a href="https://github.com/mac2000">mac2000</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
+    <div data-bind="if: joined">
+      <div class="clearfix">
+        <h4 class="pull-left">Users</h4>
+        <button data-bind="click: leave" class="pull-right btn btn-default">Leave</button>
+      </div>
+
+      <ul class="list-group" data-bind="foreach: users">
+        <li class="list-group-item">
+          <div class="media">
+            <div class="media-left media-middle">
+              <a href="#">
+                <img data-bind="attr: {src: avatar, alt: Skype}" alt="Avatar" class="media-object img-circle" />
+              </a>
+            </div>
+            <div class="media-body media-middle">
+              <h3 class="media-heading">
+                <span data-bind="text: Skype"></span>
+                <small>
+                  <span data-bind="text: Age"></span>
+                  <span data-bind="text: Country"></span>
+                </small>
+                <small data-bind="text: Topics"></small>
+              </h3>
+            </div>
+          </div>
+        </li>
+      </ul>
+
     </div>
 
-    
 
-  </body>
+
+  </div>
+  <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
+  <script src="//ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.min.js"></script>
+  <script src="//ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.js"></script>
+  <script src="//cdn.rawgit.com/jimrhoskins/knockout.localStorage/master/knockout.localStorage.js"></script>
+  <script src="//practiceenglish.azurewebsites.net/signalr/hubs"></script>
+  <script>
+    function User(data) {
+      var self = this;
+
+      ko.utils.extend(self, data);
+
+      self.avatar = ko.computed(function () {
+        return 'http://api.skype.com/users/' + self.Skype + '/profile/avatar';
+      });
+    }
+
+    function Model() {
+      var self = this;
+
+      self.connected = ko.observable(false);
+      self.joined = ko.observable(false);
+
+      self.skype = ko.observable(null, { persist: 'skype' });
+      self.age = ko.observable(null, { persist: 'age' });
+      self.country = ko.observable(null, { persist: 'country' });
+      self.topics = ko.observable(null, { persist: 'topics' });
+
+
+      self.user = ko.computed(function () {
+        return {
+          Skype: self.skype(),
+          Age: self.age(),
+          Country: self.country(),
+          Topics: self.topics()
+
+        };
+      });
+
+      self.isJoinFormVisible = ko.computed(function () {
+        return self.connected() && !self.joined();
+      });
+
+      self.users = ko.observableArray();
+
+      self.hub = jQuery.connection.chatHub;
+
+      self.hub.client.userJoined = function (user) {
+        if (self.joined() && user) self.users.push(new User(user));
+      };
+
+      self.hub.client.userLeaved = function (user) {
+        if (self.joined() && user) self.users.remove(function (item) { return item.Skype === user.Skype });
+      };
+
+      self.join = function () {
+        self.hub.server.join(self.user()).done(function () {
+          self.joined(true);
+          self.hub.server.list().done(function (users) {
+            self.users(ko.utils.arrayMap(users, function (user) { return new User(user); }));
+          });
+        });
+      };
+
+      self.leave = function () {
+        self.hub.server.leave(self.user()).done(function () {
+          self.joined(false);
+        });
+      };
+
+      jQuery.connection.hub.url = 'http://practiceenglish.azurewebsites.net/signalr/hubs';
+      jQuery.connection.hub.start().done(function () {
+        self.connected(true);
+        self.joined(false);
+      });
+
+      jQuery.connection.hub.reconnecting(function () {
+        self.connected(false);
+        self.joined(false);
+      });
+
+      jQuery.connection.hub.reconnected(function () {
+        self.connected(true);
+        self.joined(false);
+      });
+
+      jQuery.connection.hub.disconnected(function () {
+        self.connected(false);
+        self.joined(false);
+      });
+    }
+
+    var model = new Model();
+    ko.applyBindings(model);
+  </script>
+</body>
 </html>
