--- a/index.html
+++ b/index.html
@@ -1,171 +1,149 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-  <title>Practice English</title>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+<title>Practice English</title>
+<link rel="stylesheet" href="styles.css">
 </head>
-<body>
-  <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
+<body data-bind="css: status">
 
-
-    <div data-bind="if: connected">
-      <span class="label label-success">Connected</span>
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header pull-left">
+            <a class="navbar-brand" href="/">Practice English</a>
+        </div>
+        <!-- ko if: joined -->
+        <button data-bind="click: leave" type="button" class="btn btn-default navbar-btn pull-right">Leave</button>
+        <!-- /ko -->
     </div>
-    <div data-bind="ifnot: connected">
-      <span class="label label-danger">Disconnected</span>
-    </div>
+</nav>
 
-
-
-    <div data-bind="if: isJoinFormVisible">
-      <h4>Join</h4>
-      <form data-bind="submit: join">
-        <p>
-          <input type="text" placeholder="Skype" data-bind="value: skype" class="form-control" maxlength="100" required="required" />
-        </p>
-        <p>
-          <input type="number" placeholder="Age" data-bind="value: age" class="form-control" min="3" max="110" required="required" />
-        </p>
-        <p>
-          <input type="text" placeholder="Country" data-bind="value: country" class="form-control" maxlength="100" required="required" />
-        </p>
-        <p>
-          <input type="text" placeholder="Topics" data-bind="value: topics" class="form-control" maxlength="200" required="required" />
-        </p>
-        <p>
-          <input type="submit" value="Join" class="btn btn-default" />
-        </p>
-      </form>
-    </div>
-
-    <div data-bind="if: joined">
-      <div class="clearfix">
-        <h4 class="pull-left">Users</h4>
-        <button data-bind="click: leave" class="pull-right btn btn-default">Leave</button>
-      </div>
-
-      <ul class="list-group" data-bind="foreach: users">
-        <li class="list-group-item">
-          <div class="media">
-            <div class="media-left media-middle">
-              <a href="#">
-                <img data-bind="attr: {src: avatar, alt: Skype}" alt="Avatar" class="media-object img-circle" />
-              </a>
+<div class="container" data-bind="if: isJoinFormVisible">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Join</h3>
+                </div>
+                <div class="panel-body">
+                    <form data-bind="submit: join">
+                        <div class="form-group">
+                            <label for="skype">Skype</label>
+                            <input id="skype" type="text" placeholder="Your skype login..." data-bind="value: skype" maxlength="100" required="required" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label for="age">Age</label>
+                            <input id="age" type="number" placeholder="Your age..." data-bind="value: age" min="3" max="110" required="required" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label for="topics">Topics</label>
+                            <input id="topics" type="text" placeholder="Topics you interested in..." data-bind="value: topics" maxlength="200" required="required" class="form-control" />
+                        </div>
+                        <input type="hidden" data-bind="value: country" />
+                        <input type="submit" value="Join" class="btn btn-primary" />
+                    </form>
+                </div>
             </div>
-            <div class="media-body media-middle">
-              <h3 class="media-heading">
-                <span data-bind="text: Skype"></span>
-                <small>
-                  <span data-bind="text: Age"></span>
-                  <span data-bind="text: Country"></span>
-                </small>
-                <small data-bind="text: Topics"></small>
-              </h3>
+        </div>
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">Learn English while practicing with real people</h3>
+                </div>
+                <div class="panel-body">
+                    <blockquote>Easies possible way to learn English is practice.</blockquote>
+                    <p>There is no need to practice english with native speakers (at least if you are not pro) start practice it with real people instead of learning yet one new boring grammatic rule.</p>
+                    <p>Enter your skype login, age and topics you would like to disqus and join community of other people who also looking for someone to practice.</p>
+                    <p>You will be shown in the list until you close web page, no registration required, just join whenever you have time to speak with someone</p>
+                    <hr>
+                    <p>Your country is detected automatically and will be displayed right against your avatar - it is required for you to be able to select people not from your country. Idea behind this is that you should practice with person who do not know your native language, so you both will not have any other way than explaing things to each other in English.</p>
+                    <p>Age is required just to give you ability to choose persons you will be practicing with based on age, e.g. I bet if you are 40+ it will be hard to find something to speak about with 16 year old teenager.</p>
+                    <hr>
+                    <p>Here is how it will look like:</p>
+
+                    <div class="panel panel-default">
+                        <div class="panel-body">
+                            <div class="media hidden-xs">
+                                <div class="media-left media-middle">
+                                    <div style="position: relative;width:96px;height:96px;margin:auto;">
+                                        <img class="img-circle img-thumbnail" src="http://api.skype.com/users/echo123/profile/avatar" alt="Avatar" width="96" height="96" style="min-width: 96px" />
+                                        <span class="flag"><span class="flag-icon flag-icon-ua"></span></span>
+                                    </div>
+                                </div>
+                                <div class="media-body media-middle">
+                                    <h3 class="media-heading" style="margin: 0">echo123 <span class="text-muted">25</span></h3>
+                                    <p class="text-muted" style="margin: 0;margin-bottom: -1em;">Test call</p>
+                                </div>
+                                <div class="media-right media-middle">
+                                    <a href="skype:echo123?call" class="btn btn-primary"><span class="glyphicon glyphicon-align-left glyphicon-earphone"></span> Call</a>
+                                </div>
+                            </div>
+                            <div class="text-center visible-xs">
+                                <p>
+                                    <div style="position: relative;width:96px;height:96px;margin:auto;">
+                                        <img class="img-circle img-thumbnail" src="http://api.skype.com/users/echo123/profile/avatar" alt="Avatar" width="96" height="96" style="min-width: 96px" />
+                                        <span class="flag"><span class="flag-icon flag-icon-ua"></span></span>
+                                    </div>
+                                </p>
+                                <h3 class="media-heading">echo123 <span class="text-muted">25</span></h3>
+                                <p class="text-muted">Test call</p>
+                                <a href="skype:echo123?call" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-align-left glyphicon-earphone"></span> Call</a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
             </div>
-          </div>
-        </li>
-      </ul>
-
+        </div>
     </div>
+</div>
+
+
+<div class="container" data-bind="if: joined">
+    <div data-bind="foreach: users">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="media hidden-xs">
+                    <div class="media-left media-middle">
+                        <div style="position: relative;width:96px;height:96px;margin:auto;">
+                            <img data-bind="attr: {src: avatar, alt: Skype}" class="img-circle img-thumbnail" alt="Avatar" width="96" height="96" style="min-width: 96px" />
+                            <span class="flag"><span data-bind="css: countryIconClass, attr: {title: Country}"></span></span>
+                        </div>
+                    </div>
+                    <div class="media-body media-middle">
+                        <h3 class="media-heading" style="margin: 0"><span data-bind="text: Skype"></span> <span data-bind="text: Age" class="text-muted"></span></h3>
+                        <p class="text-muted" style="margin: 0;margin-bottom: -1em;" data-bind="text: Topics"></p>
+                    </div>
+                    <div class="media-right media-middle">
+                        <a href="#" data-bind="attr: {href: call}" class="btn btn-primary"><span class="glyphicon glyphicon-align-left glyphicon-earphone"></span> Call</a>
+                    </div>
+                </div>
+                <div class="text-center visible-xs">
+                    <p>
+                        <div style="position: relative;width:96px;height:96px;margin:auto;">
+                            <img data-bind="attr: {src: avatar, alt: Skype}" class="img-circle img-thumbnail" alt="Avatar" width="96" height="96" style="min-width: 96px" />
+                            <span class="flag"><span data-bind="css: countryIconClass, attr: {title: Country}"></span></span>
+                        </div>
+                    </p>
+                    <h3 class="media-heading"><span data-bind="text: Skype"></span> <span data-bind="text: Age" class="text-muted"></span></h3>
+                    <p class="text-muted" data-bind="text: Topics"></p>
+                    <a href="#" data-bind="attr: {href: call}" class="btn btn-primary btn-block"><span class="glyphicon glyphicon-align-left glyphicon-earphone"></span> Call</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
-  </div>
-  <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-  <script src="//ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.min.js"></script>
-  <script src="//ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.js"></script>
-  <script src="//cdn.rawgit.com/jimrhoskins/knockout.localStorage/master/knockout.localStorage.js"></script>
-  <script src="//practiceenglish.azurewebsites.net/signalr/hubs"></script>
-  <script>
-    function User(data) {
-      var self = this;
 
-      ko.utils.extend(self, data);
-
-      self.avatar = ko.computed(function () {
-        return 'http://api.skype.com/users/' + self.Skype + '/profile/avatar';
-      });
-    }
-
-    function Model() {
-      var self = this;
-
-      self.connected = ko.observable(false);
-      self.joined = ko.observable(false);
-
-      self.skype = ko.observable(null, { persist: 'skype' });
-      self.age = ko.observable(null, { persist: 'age' });
-      self.country = ko.observable(null, { persist: 'country' });
-      self.topics = ko.observable(null, { persist: 'topics' });
-
-
-      self.user = ko.computed(function () {
-        return {
-          Skype: self.skype(),
-          Age: self.age(),
-          Country: self.country(),
-          Topics: self.topics()
-
-        };
-      });
-
-      self.isJoinFormVisible = ko.computed(function () {
-        return self.connected() && !self.joined();
-      });
-
-      self.users = ko.observableArray();
-
-      self.hub = jQuery.connection.chatHub;
-
-      self.hub.client.userJoined = function (user) {
-        if (self.joined() && user) self.users.push(new User(user));
-      };
-
-      self.hub.client.userLeaved = function (user) {
-        if (self.joined() && user) self.users.remove(function (item) { return item.Skype === user.Skype });
-      };
-
-      self.join = function () {
-        self.hub.server.join(self.user()).done(function () {
-          self.joined(true);
-          self.hub.server.list().done(function (users) {
-            self.users(ko.utils.arrayMap(users, function (user) { return new User(user); }));
-          });
-        });
-      };
-
-      self.leave = function () {
-        self.hub.server.leave(self.user()).done(function () {
-          self.joined(false);
-        });
-      };
-
-      jQuery.connection.hub.url = 'http://practiceenglish.azurewebsites.net/signalr/hubs';
-      jQuery.connection.hub.start().done(function () {
-        self.connected(true);
-        self.joined(false);
-      });
-
-      jQuery.connection.hub.reconnecting(function () {
-        self.connected(false);
-        self.joined(false);
-      });
-
-      jQuery.connection.hub.reconnected(function () {
-        self.connected(true);
-        self.joined(false);
-      });
-
-      jQuery.connection.hub.disconnected(function () {
-        self.connected(false);
-        self.joined(false);
-      });
-    }
-
-    var model = new Model();
-    ko.applyBindings(model);
-  </script>
+<script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/signalr/jquery.signalr-2.2.0.min.js"></script>
+<script src="//ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.js"></script>
+<script src="//practice-english.azurewebsites.net/signalr/hubs" id="hub"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
